# timesheettool

./: .gitignore  Cargo.toml  README.md  diesel.toml  example.timesheettool.toml
migrations/2024-08-29-055549_initialize/: down.sql  up.sql
src/: commands.rs  config.rs  dateparse.rs  db.rs  lib.rs  main.rs  parse.rs  print.rs  records.rs  schema.patch  schema.rs
src/parse/: dateparse.rs  reldateparse.rs
src/records/: db.rs  schema.patch  schema.rs
