[package]
name = "timesheettool"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
diesel = { version = "2.2.3", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dirs = "5.0.1"
dotenvy = "0.15.7"
log = "0.4.22"
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
sqids = "0.4.1"
stderrlog = "0.6.0"
toml = "0.8.19"
tzfile = "0.1.3"

[profile.release]
codegen-units = 1
lto = "fat"
